fix: Logout body.overflow

--- a/src/modals/Modal.module.css
+++ b/src/modals/Modal.module.css
@@ -7,8 +7,11 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: var(--black);
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+.search {
+  background-color: var(--white);
 }
 
 .main {
@@ -18,6 +21,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px 60px;
+}
+
+.wrapper {
 }
 
 .close {
